<resources>
    <string name="app_name">Sandoken</string>
    <string name="welcome_text">Welcome on Sandoken</string>
    <string name="welcome_btn">Play</string>
    <string name="stats_btn">Statistics</string>
    <string name="win_message_title">Congratulations!</string>
    <string name="win_message_desc">Congratulations, you finished this grid!\n XYZ% of players have succeeded this Sandoken!\n ABC player(s) have finished this Sandoken</string>
    <string name="mode_crayon_label">Pencil mode</string>
    <string name="edition_stylo">STYLO</string>
    <string name="edition_crayon">CRAYON</string>

...
    <string name="raz_btn_desc">Are you sure you want to clear the grid?</string>


    <string name="new_game_btn_label">New game</string>
    <string name="new_game_btn_desc">Are you sure you want to start a new grid?</string>

    <string name="rules_btn_label">Rules</string>
    <string name="clear_box_btn_label">Clear box</string>
    <string name="help_btn_label">Help</string>
    <string name="rules_title">Rules</string>
    <string name="rules_body">
        The game is a grid of numbers to complete invented by a Japanese teacher, Tetsuya Miyamoto. Close to Sudoku, it mixes intuition, logic and calculation.\n\n
        Sudoku-style, the goal of the game is to fill all grid squares with numbers from 1 to 6 without ever having twice the same number in the same column or on the same line.\n\n
...
