...
        android:textColor="@color/my_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_main" />

    <Button
        android:id="@+id/welcome_rules_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rules_btn"
        android:padding="10dp"
        android:text="@string/rules_btn_label"
        android:textColor="@color/my_white"
        android:textSize="@dimen/size_crayon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
