...
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
...
